# Mandelbrot

./: AVLTree.h  BernsteinContinuous.h  CMakeLists.txt  Configuration.cpp  Configuration.h  Dictionary.h  Greyscale.h  KeyValue.h  LICENSE  LinearColoring.h  MandelConfig.cpp  MandelConfig.h  Mandelbrot.cpp  Mandelbrot.h  ReadMe.md  Utils.cpp  Utils.h  config.cpp  config.h  main.cpp  make  pretty.txt  zoomed.txt
